--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -3,10 +3,10 @@ name: Build EXE
 on:
   push:
     branches:
-      - main
+      - actions
   pull_request:
     branches:
-      - main
+      - actions
 
 jobs:
   build:
