--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -34,4 +34,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: code_redeemer
-        path: dist/code_redeemer.exe
+        path: dist/main.exe
