--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pyinstaller
-beautifulsoup4
-selenium
-requests
-python-dotenv
+beautifulsoup4~=4.12.3
+selenium~=4.27.1
+requests~=2.32.3
+python-dotenv~=1.0.1
